--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "build": "cd frontend && npm install && npm run build"
   }
+  
 }
