--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Change to frontend directory
-        run: cd frontend
-
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: cd frontend && npm install --legacy-peer-deps
 
       - name: Run ESLint
         run: npm run lint
+        working-directory: frontend
